--- a/Design & Layout/style.scss
+++ b/Design & Layout/style.scss
@@ -40,7 +40,6 @@ body{background-color: #CAB69D;}
     z-index: 1;
     @include breakpoint(752px, 1024px){margin-top: 10px;}
     @include min-breakpoint(1025px){
-        position: fixed; /*Nav Bar follows as user scrolls on the page.*/
         height: 100px;
         width: 100%;
         grid-template-columns: 30% 20% 30%;
@@ -412,7 +411,6 @@ footer a:hover{color: #946d3e;}
         height: 60vh;
     }
     @include min-breakpoint(1025px){
-        margin-top: 100px;
         height: 80vh;
     }
 }
@@ -429,7 +427,7 @@ video{
 .text-filter{
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     text-align: justify;
 }
 
@@ -505,3 +503,118 @@ video{
     visibility: hidden;
     @include max-breakpoint(752px){visibility: visible;}
 }
+
+/*ABOUT Page*/
+.main-about{
+    position: relative;
+    height: 75vh;
+    background-image: url("/Media/Images/pexels-aysegul-alp-14850327.jpg");
+    @include breakpoint(481px, 1024px){
+        height: 90vh;
+    }
+    @include min-breakpoint(1025px){
+        height: 80vh;
+    }
+}
+
+
+.about-frame{
+    position: relative;
+    width: 80%;
+    height: 65vh;
+    margin: auto;
+    background-color: rgba(202, 168, 127, 0.85);
+    padding: 20px;
+    @include max-breakpoint(480px){width: 95%; height: 75vh;}
+    @include breakpoint(481px, 1024px){
+        height: 90vh;
+    }
+    @include min-breakpoint(1025px){
+        width: 60%;
+        height: 75vh;
+        
+    }
+}
+
+.about-frame p{
+    width: 100%;
+    padding: 15px;
+    margin: auto;
+    position: relative;
+    @include max-breakpoint(480px){font-size:2.8vw;}
+    @include breakpoint(481px, 752px){font-size: 15px;}
+    @include min-breakpoint(1025px){margin-top: 5%;}
+}
+
+/*BASKET Page*/
+.main-cart{
+    position: relative;
+    height: 75vh;
+    background-image: linear-gradient(to bottom, white, #CAB69D, white);
+    @include breakpoint(481px, 1024px){
+        height: 90vh;
+    }
+    @include min-breakpoint(1025px){
+        height: 80vh;
+    }
+}
+.cart-frame{
+    position: relative;
+    width: 80%;
+    height: 65vh;
+    margin: auto; 
+    padding: 20px;
+    @include max-breakpoint(480px){width: 95%; height: 75vh;}
+    @include breakpoint(481px, 1024px){
+        height: 90vh;
+    }
+    @include min-breakpoint(1025px){
+        width: 60%;
+        height: 75vh;
+        
+    }
+}
+.affiliates{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    justify-content:space-evenly;
+    align-items: center;
+}
+.affiliates img{max-width: 90%;}
+
+/*PRODUCTS PAGE*/
+.products{
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    justify-content: space-around;
+    margin: auto;
+    height: 100%;
+    @include max-breakpoint(752px){
+        display: flex;
+        flex-direction: column;
+    }
+}
+.types{
+    background-color: azure;
+    max-width: 400px;
+    max-height: 500px;
+}
+.prod-img{
+    width: 90%;
+    height: 450px;
+    margin-left: auto; margin-right: auto;
+    background-size: cover;
+}
+
+.products h2{
+    margin-left: 6%;
+    margin-top: 1%;
+}
+
+#prod-one{background-image: url("/Media/Images/1.jpg");}
+#prod-two{background-image: url("/Media/Images/2.jpg");}
+#prod-three{background-image: url("/Media/Images/3.jpg");}
+#prod-four{background-image: url("/Media/Images/4.jpg");}
+#prod-five{background-image: url("/Media/Images/5.jpg");}
+#prod-six{background-image: url("/Media/Images/6.jpg");}
+#prod-seven{background-image: url("/Media/Images/7.jpg");}
